--- a/client/client.html
+++ b/client/client.html
@@ -69,41 +69,45 @@
       handleResponse(response);
     };
 
-    const requestUpdate = async (userForm) => {
-      const urlField = userForm.querySelector('#urlField');
-      const methodSelect = userForm.querySelector('#methodSelect');
+    const requestAuthor = async (authorForm) => {
+    const url = authorForm.getAttribute('action');
+    const method = authorForm.getAttribute('method');
 
-      const url = urlField.value;
-      const method = methodSelect.value;
+    const author = authorForm.querySelector('#authorField').value;
 
-      let response = await fetch(url, {
+    const response = await fetch(`${url}?author=${encodeURIComponent(author)}`, {
         method: method,
         headers: {
-          'Accept': 'application/json'
+            'Accept': 'application/json',
         },
-      });
+    });
 
-      handleResponse(response, method === 'get');
+    handleResponse(response, true);
+};
+
+const sendFetch = async (url) => {
+      let response = await fetch(url);
+
+      handleResponse(response);
     };
 
+
     const init = () => {
-      const nameForm = document.querySelector('#nameForm');
-      const userForm = document.querySelector('#userForm');
+      const booksButton = document.querySelector('#getBooks');
+      const titlesButton = document.querySelector('#getTitles');
+      const authorForm = document.querySelector('#authorForm');
 
-      const addUser = (e) => {
+      const getBooks = () => sendFetch('/getBooks');
+      const getTitles = () => sendFetch('/getTitles');
+
+      const getAuthor = (e) => {
         e.preventDefault();
-        sendPost(nameForm);
-        return false;
+        requestAuthor(authorForm);
       }
 
-      const getUsers = (e) => {
-        e.preventDefault();
-        requestUpdate(userForm);
-        return false;
-      }
-
-      nameForm.addEventListener('submit', addUser);
-      userForm.addEventListener('submit', getUsers);
+      booksButton.addEventListener('click', getBooks);
+      titlesButton.addEventListener('click', getTitles);
+      authorForm.addEventListener('submit', getAuthor);
     };
 
     window.onload = init;
@@ -112,25 +116,36 @@
 
 <body>
   <section id="top">
-    <h3>POST Status Code Tests</h3>
-    <form id="nameForm" action="/addUser" method="post">
-      <label for="name">Name: </label>
-      <input id="nameField" type="text" name="name" />
-      <label for="age">Age: </label>
-      <input id="ageField" type="number" name="age" min="0" max="100" step="1" />
-      <input type="submit" value="Add User" />
-    </form>
-    <form id="userForm" action="/getUsers" method="get">
-      <select id='urlField'>
-        <option value='/getUsers'>/getUsers</option>
-        <option value='/notReal'>/notReal</option>
-      </select>
-      <select id="methodSelect">
-        <option value="get">GET</option>
-        <option value="head">HEAD</option>
-      </select>
-      <input type="submit" value="Get User" />
-    </form>
+    <div>
+      <h3>GetBooks [GET]</h3>
+      <button id="getBooks">Get Books</button>
+    </div>
+    <div>
+      <h3>GetTitles [GET]</h3>
+      <button id="getTitles">Get Titles</button>
+    </div>
+    <div>
+      <h3>GetAuthor [GET]</h3>
+      <form id="authorForm" action="/getAuthor" method="get">
+        <label for="author">Author: </label>
+        <input id="authorField" type="text" name="author" />
+        <input type="submit" value="Get Books by Author" />
+      </form>
+    </div>
+    <div>
+      <h3>GetBook [GET]</h3>
+      <form id="getBookForm" action="/getBook" method="get">
+        <label for="title">Title: </label>
+        <input id="titleField" type="text" name="title" />
+        <input type="submit" value="Get Book by Title" />
+      </form>
+    </div>
+    <div>
+      <h3>addBook [POST]</h3>
+    </div>
+    <div>
+      <h3>rateBook [POST]</h3>
+    </div>
   </section>
   <section id="content">
   </section>
