Added a link to my proj documentation on both pages

--- a/client/apiDoc.html
+++ b/client/apiDoc.html
@@ -147,7 +147,7 @@
       <h4>Links</h4>
       <ul>
         <li><a href="./client.html">Client Page</a></li>
-        <li><a href="">Project Documentation PDF</a></li>
+        <li><a href="./hortonb-proj1-doc.pdf">Project Documentation PDF</a></li>
       </ul>
     </div>
   </footer>
