--- a/client/client.html
+++ b/client/client.html
@@ -263,7 +263,7 @@ const handleResponse = async (response, parseResponse) => {
       <h4>Links</h4>
       <ul>
         <li><a href="./apiDoc.html">API Documentation</a></li>
-        <li><a href="">Project Documentation PDF</a></li>
+        <li><a href="./hortonb-proj1-doc.pdf">Project Documentation PDF</a></li>
       </ul>
     </div>
   </footer>
